BB-21262: Multiple visual issues on quote edit page on mobile - 5.0 (#32474)

--- a/src/Oro/Bundle/SaleBundle/Resources/public/css/scss/style.scss
+++ b/src/Oro/Bundle/SaleBundle/Resources/public/css/scss/style.scss
@@ -1,7 +1,6 @@
 /* @theme: admin.oro; */
 
 /* stylelint-disable no-descending-specificity */
-
 .grid-container {
     .table-bordered {
         tbody {
@@ -19,6 +18,10 @@
             border-top: 0;
         }
     }
+}
+
+.quote-lineitem td {
+    vertical-align: top;
 }
 
 .quote-lineitem-requested-quantity,
